# koan

./: .gitignore  AGENTS.md  PLAN.md  README.md  design-decisions.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json
.config/: wt.toml
.github/workflows/: ci.yml
.koan/memory/: 0005-phase-trust-model-plan-review-as-designated.md  0011-intake-confidence-loop-removed-unnecessary-scout.md  0015-three-active-workflows-plan-milestones-stub.md  (+63 more)
docs/: architecture.md  artifact-review.md  design-system.md  epic-brief.md  frontend.md  guided-transitions.md  intake-loop.md  ipc.md  milestones.md  phase-trust.md  planning-widget.md  projections.md  state.md  subagents.md  token-streaming.md
evals/: cases.py  dataset.py  harvest.py  rubrics.py  runner.py  scorers.py  solver.py  tasks.py
extensions/: koan.ts
frontend/: package-lock.json  package.json  vite.config.ts  vite.review.config.ts
koan/: __main__.py  artifacts.py  config.py  driver.py  epic_state.py  events.py  logger.py  probe.py  projections.py  run_state.py  state.py  subagent.py  types.py
plans/: 2026-03-31-symmetric-projection-folds.md
tests/: phase-dag.test.ts  progress.test.ts  qr-grouped-verify.test.ts  session-model-threading.test.ts  state-machine.test.ts  story-discovery.test.ts  test_driver.py  test_interactions.py  test_mcp_check_or_raise.py  test_permissions.py  test_phase_dag.py  test_phase_guidance.py  test_phases.py  test_probe.py  test_projections.py  test_registry.py  test_runners.py  test_subagent.py  test_web_flows.py  test_workflows.py  widget.test.ts
(+275 files in other folders)
