[project]
name = "koan"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "starlette",
    "uvicorn[standard]",
    "fastmcp",
    "jinja2",
    "aiofiles",
]

[project.scripts]
koan = "koan.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["koan"]
